# setlist-os

./: flake.nix
backend/: .gitignore  Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/e2e/: Cargo.toml
backend/e2e/src/: lib.rs
backend/e2e/src/harness/: docker.rs  mod.rs  process.rs  wait.rs
backend/e2e/tests/: album_flow.rs  import_flow.rs
backend/migrations/: 01_core.sql
backend/scripts/: test.sh
backend/shared/: Cargo.toml
backend/shared/src/: amqp.rs  lib.rs  pipeline.rs  tracing_init.rs
backend/tools/scanner/: Cargo.toml
backend/tools/scanner/src/: main.rs
backend/workers/fetch/: Cargo.toml
backend/workers/fetch/src/: main.rs
backend/workers/fingerprint/: Cargo.toml
backend/workers/fingerprint/src/: main.rs
backend/workers/import/: Cargo.toml
backend/workers/import/src/: main.rs
backend/workers/index/: Cargo.toml
backend/workers/index/src/: main.rs
backend/workers/match/: Cargo.toml
backend/workers/match/src/: main.rs
backend/workers/tag/: Cargo.toml
backend/workers/tag/src/: main.rs
hosts/: setlist-os.nix
infra/: docker-compose.yml  env.example
modules/setlist-os/: default.nix
scripts/: bootstrap.sh  dev.sh
scripts/lib/: common.sh
