[workspace]
members = [
    "shared",
    "api",
    "workers/import",
    "workers/fingerprint",
    "workers/match",
    "workers/tag",
    "workers/index",
    "workers/fetch",
    "tools/scanner",
    "e2e"
]
resolver = "2"

[workspace.package]
edition = "2021"
license  = "MIT"

[workspace.dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
uuid         = { version = "1.7", features = ["v4", "serde"] }
tokio        = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "signal"] }
lapin        = { version = "2.3", default-features = false, features = ["native-tls"] }
anyhow       = "1.0"
dotenvy      = "0.15"
futures-util = "0.3"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["fmt", "env-filter", "json"] }

