[package]
name    = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { workspace = true }
axum         = { version = "0.7", features = ["macros"] }
lapin        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
anyhow       = { workspace = true }
dotenvy      = { workspace = true }
sqlx         = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "migrate"] }
futures-util = { workspace = true }
shared       = { path = "../shared" }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }


