[package]
name    = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }

lapin               = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
