[package]
name    = "worker-fingerprint"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { workspace = true }
lapin        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
anyhow       = { workspace = true }
dotenvy      = { workspace = true }
futures-util = { workspace = true }
command-group = "1.0"          # for safe external binary execution (fpcalc, beets, etc.)
shared       = { path = "../../shared" }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

