[package]
name    = "worker-import"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { workspace = true }
lapin        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
anyhow       = { workspace = true }
dotenvy      = { workspace = true }
futures-util = { workspace = true }
sqlx         = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }
shared       = { path = "../../shared" }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
walkdir        = "2"                       # directory recursion
lofty          = "0.18"

